# default-value

./: .pre-commit-config.yml  LICENSE  Makefile  README.md  pyproject.toml
.config/: .coveragerc  mkdocs.yml  mypi.ini  ruff.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
src/default_value/: default_value.py
